--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -28,7 +28,7 @@ jobs:
         python -m flake8
         # перейти в папку, содержащую manage.py — 
         #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
-        cd yamdb_final/ b 
+        cd yamdb_final/
         # запустить написанные разработчиком тесты
         python manage.py test
 
