--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -62,6 +62,7 @@ jobs:
           script: |
             sudo docker-compose stop
             sudo docker-compose rm web
+            cd infra/
             rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
