--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
 
   web:
     container_name: web
+    build: .
     image: antonenkoelena/api_yamdb:latest
     restart: always
     volumes:
