--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -32,6 +32,10 @@ jobs:
         cd api_yamdb/
         # запустить написанные разработчиком тесты
         python manage.py test
+  
+  build:
+    runs-on: ubuntu-latest
+    needs: tests 
 
   build_and_push_to_docker_hub:
 
