--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -46,10 +46,7 @@
 #           context: api_yamdb/
 #           push: true
 #           tags: antonenkoelena/quirky_blackwell:latest 
-  
-  
-  
-#   deploy:
+#   zzdeploy:
 #     runs-on: ubuntu-latest
 #     needs: build_and_push_to_docker_hub
 #     if: github.ref == 'refs/heads/master' || 'refs/heads/main'
@@ -83,71 +80,91 @@
 #       with:
 #         to: ${{ secrets.TELEGRAM_TO }}
 #         token: ${{ secrets.TELEGRAM_TOKEN }}
-#         message: ${{ github.workflow }} успешно выполнен!
+#         message: ${{ github.workflow }} успешно выполнен! 
 
 
+name: api_yamdb workflow
 
-name: scp files
 on: [push]
+
 jobs:
-
-  build:
-    name: Build
+  tests:
     runs-on: ubuntu-latest
+
     steps:
-    - name: checkout
-      uses: actions/checkout@v3
-
-    - name: copy file via ssh password
-      uses: ./
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
-        source: "tests/a.txt,tests/b.txt"
-        target: "test"
+        python-version: 3.7
 
-    - name: copy file via ssh key
-      uses: ./
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
-        port: ${{ secrets.PORT }}
-        source: "tests/a.txt,tests/b.txt"
-        target: "test"
+    - name: Install dependencies
+      run: | 
+        python -m pip install --upgrade pip 
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort pytest
+        pip install -r api_yamdb/requirements.txt 
 
-    - name: remove the specified number of leading path elements
-      uses: ./
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.PORT }}
-        source: "tests/a.txt,tests/b.txt"
-        target: "foobar"
-        strip_components: 1
+    - name: Test with flake8 and django tests
+      run: |
+        python -m flake8 
+        pytest
+        cd api_yamdb/
+        python manage.py test
 
-    - name: ssh key with passphrase
-      uses: ./
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.SSH2 }}
-        passphrase: ${{ secrets.PASSPHRASE }}
-        port: ${{ secrets.PORT }}
-        source: "tests/a.txt,tests/b.txt"
-        target: "test"
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2 
+        with:
+          file: api_yamdb/Dockerfile
+          context: api_yamdb/
+          push: true
+          tags: usolev/api_yamdb:latest 
 
-    - name: use insecure cipher
-      uses: ./
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master' || 'refs/heads/main'
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            sudo docker-compose stop
+            sudo docker-compose rm web
+            rm .env
+            touch .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker-compose up -d 
+
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+    - name: send message
+      uses: appleboy/telegram-action@master
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.SSH2 }}
-        passphrase: ${{ secrets.PASSPHRASE }}
-        port: ${{ secrets.PORT }}
-        source: "tests/a.txt,tests/b.txt"
-        target: "test"
-        use_insecure_cipher: true
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: ${{ github.workflow }} успешно выполнен! 
