--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
 
   web:
     container_name: web
-    build: ./path
+    build: .
     # image: antonenkoelena/api_yamdb:latest
     restart: always
     volumes:
