--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -45,7 +45,7 @@ jobs:
           file: api_yamdb/Dockerfile
           context: api_yamdb/
           push: true
-          tags: antonenkoelena/quirky_blackwell:latest 
+          tags: antonenkoelena/yamdb:latest 
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
