--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -4,12 +4,12 @@ services:
   db:
     image: postgres:13.0-alpine
     container_name: postgres13
-    environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    # environment:
+    #   POSTGRES_DB: ${DB_NAME}
+    #   POSTGRES_USER: ${POSTGRES_USER}
+    #   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
-      - /var/lib/postgresql/data/
+      - db_value: /var/lib/postgresql/data/
     env_file:
       - ./.env
 
@@ -40,3 +40,4 @@ services:
 volumes:
   static_value:
   media_value:
+  db_value:
